[project]
name = "vpp-bidding"
version = "0.1.0"
description = "RL-based strategic bidding for Virtual Power Plants across multiple electricity markets"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
    "optuna>=3.6",
    "wandb>=0.17",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "plotly>=5.22",
    "openpyxl>=3.1",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs",
]

[project.scripts]
vpp-bidding = "vpp_bidding.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpp_bidding"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["vpp_bidding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
packages = ["vpp_bidding"]
mypy_path = ["src"]
